// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAddressWidget when isReadOnly is FALSE should render UserAddressWidget correctly 1`] = `
<div
  className="user_address_widget"
>
  <div
    className="user_address_content"
  >
    <div
      className="user_address_widget__title"
    >
      Address
    </div>
    <div
      className="user_address_widget__inputs"
    >
      <input
        name="addressLine1"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="Address Line 1"
        readOnly={false}
        type="text"
        value="123 Evergreen Terrace"
      />
      <input
        name="addressLine2"
        onChange={[Function]}
        placeholder="Address Line 2"
        readOnly={false}
        type="text"
        value="Apt. 456"
      />
      <div
        className="user_address_widget__inputs_location"
      >
        <input
          name="city"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="City"
          readOnly={false}
          type="text"
          value="Durham"
        />
        <input
          name="state"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="State"
          readOnly={false}
          type="text"
          value="NC"
        />
        <input
          name="postalCode"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="Postal Code"
          readOnly={false}
          type="text"
          value="27540"
        />
      </div>
    </div>
  </div>
  <div
    className="user_address_widget__button"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      Update Address
    </button>
  </div>
</div>
`;

exports[`UserAddressWidget when isReadOnly is TRUE should render UserAddressWidget correctly 1`] = `
<div
  className="user_address_widget"
>
  <div
    className="user_address_content"
  >
    <div
      className="user_address_widget__title"
    >
      Address
    </div>
    <div
      className="user_address_widget__inputs"
    >
      <input
        name="addressLine1"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="Address Line 1"
        readOnly={true}
        type="text"
        value="123 Evergreen Terrace"
      />
      <input
        name="addressLine2"
        onChange={[Function]}
        placeholder="Address Line 2"
        readOnly={true}
        type="text"
        value="Apt. 456"
      />
      <div
        className="user_address_widget__inputs_location"
      >
        <input
          name="city"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="City"
          readOnly={true}
          type="text"
          value="Durham"
        />
        <input
          name="state"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="State"
          readOnly={true}
          type="text"
          value="NC"
        />
        <input
          name="postalCode"
          onBlur={[MockFunction]}
          onChange={[Function]}
          placeholder="Postal Code"
          readOnly={true}
          type="text"
          value="27540"
        />
      </div>
    </div>
  </div>
</div>
`;
